fix: swaps - fix z-index issue

--- a/assets/css/components/_inputs.scss
+++ b/assets/css/components/_inputs.scss
@@ -193,7 +193,7 @@ input[type='number'] {
 }
 
 .input-select.input-token.input-select .vs__selected {
-  @apply w-full h-20 relative border-none p-0 m-0 z-1000;
+  @apply w-full h-20 relative border-none p-0 m-0 z-900;
 }
 
 .v-select.input-token.input-select {
